HSC-1367: Update endpoint-simplification branch following sprint review items - Added breadcrumbs to cluster tiles page - Fixed breadcrumbs in space states - Update alignment/spacing in placements - Converted dashboard empty message to use endpoint styles

--- a/src/app/view/endpoints/clusters/cluster/cluster.scss
+++ b/src/app/view/endpoints/clusters/cluster/cluster.scss
@@ -3,27 +3,6 @@
 @import 'actions/actions';
 
 .cluster {
-  .cluster-breadcrumb {
-    //width: 100%;
-    margin-top: 1px;
-
-    &.breadcrumb {
-      //TODO (TEAMFOUR-778): Long term fix for position + home of endpoints breadcrumbs
-      margin-left: -15px;
-      width: calc(100% + 30px);
-
-      li {
-        text-transform: none;
-        font-weight: inherit;
-
-        //TODO (TEAMFOUR-778): Long term fix for position + home of endpoints breadcrumbs
-        &:first-of-type {
-          padding-left: $hpe-unit-space / 2;
-        }
-
-      }
-    }
-  }
 
   // Give the headers a uniform padding
   h3 {
@@ -47,16 +26,6 @@
     position: absolute;
     right: $hpe-unit-space / 2; // ok with scroll bar on, no time find a way to satisfy both with and without the scrollbar
     top: $hpe-unit-space
-  }
-
-  .cluster-detail {
-
-    padding-left: $hpe-unit-space;
-    padding-right: $hpe-unit-space;
-
-    .application-nav {
-      margin-bottom: 15px;
-    }
   }
 
   .cluster-empty-list {
